Add default project setting

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ tmp/
 *.swp
 *~.nib
 local.properties
-.settings/
+# .settings/
 .loadpath
 .recommenders
 
@@ -35,7 +35,7 @@ local.properties
 *.pydevproject
 
 # CDT-specific (C/C++ Development Tooling)
-.cproject
+# .cproject
 
 # CDT- autotools
 .autotools
