Add project dependency
To edit .project involve .cproject changed

--- a/mrr_18xx_mss/.project
+++ b/mrr_18xx_mss/.project
@@ -3,6 +3,7 @@
 	<name>mrr_18xx_mss</name>
 	<comment></comment>
 	<projects>
+		<project>mrr_18xx_dss</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
